--- a/lib/flt/Makefile
+++ b/lib/flt/Makefile
@@ -96,7 +96,14 @@ VERBOSE := 1
 # trace/debug/info/warn/error/critical: set DEBUG macro to the given level
 #
 # By default debug is none.
-DEBUG_LVL := none
+LOG_LVL := none
+
+# Timer switch. Turns compilation with timer support on or off. To turn the
+# timer on simply set this variable to on. The timer in the FLT lib will be
+# available for use in your program (assuming you are using the FLT lib)
+#
+# By default the timer is off
+TIMER := off
 
 # Name prefix for test executable
 TEST_PREFIX := test_
@@ -146,7 +153,7 @@ else ifeq (${LANG},C++)
 endif
 
 # Compiler flags
-CFLAGS := -Wall -Wextra -Werror -g
+CFLAGS := -Wall -Wextra -Werror
 ifeq (${LANG},C++)
 	CFLAGS += -std=c++98
 endif
@@ -176,20 +183,25 @@ endif
 DFLAGS := -g
 
 # Debug lvl flag
-ifeq (${DEBUG_LVL}, none)
-	CFLAGS += -UDEBUG_LVL
-else ifeq (${DEBUG_LVL}, trace)
-	CFLAGS += -DDEBUG_LVL=TRACE
-else ifeq (${DEBUG_LVL}, debug)
-	CFLAGS += -DDEBUG_LVL=DEBUG
-else ifeq (${DEBUG_LVL}, info)
-	CFLAGS += -DDEBUG_LVL=INFO
-else ifeq (${DEBUG_LVL}, warn)
-	CFLAGS += -DDEBUG_LVL=WARN
-else ifeq (${DEBUG_LVL}, error)
-	CFLAGS += -DDEBUG_LVL=ERROR
-else ifeq (${DEBUG_LVL}, fatal)
-	CFLAGS += -DDEBUG_LVL=FATAL
+ifeq (${LOG_LVL},none)
+	CFLAGS += -ULOG_LVL
+else ifeq (${LOG_LVL}, trace)
+	CFLAGS += -DLOG_LVL=FLT_LOG_TRACE_LVL
+else ifeq (${LOG_LVL}, debug)
+	CFLAGS += -DLOG_LVL=FLT_LOG_DEBUG_LVL
+else ifeq (${LOG_LVL}, info)
+	CFLAGS += -DLOG_LVL=FLT_LOG_INFO_LVL
+else ifeq (${LOG_LVL}, warn)
+	CFLAGS += -DLOG_LVL=FLT_LOG_WARN_LVL
+else ifeq (${LOG_LVL}, error)
+	CFLAGS += -DLOG_LVL=FLT_LOG_ERROR_LVL
+else ifeq (${LOG_LVL}, fatal)
+	CFLAGS += -DLOG_LVL=FLT_LOG_FATAL_LVL
+endif
+
+# Timer activation
+ifeq (${TIMER},on)
+	CFLAGS += -DFLT_TIMER
 endif
 
 # Coverage flags
@@ -279,7 +291,7 @@ endif
 # Exemple:
 # DIRS := folder1/:folder2/
 # DIRS += folder1/:folder3/:folder4/
-DIRS := log/:unit_test/
+DIRS := log/:unit_test/:timer/
 
 # List of directories with tests. Formating follows the same rules as DIRS
 # above. All folders are relative to TST_ROOT. Each group of folder should only
@@ -330,6 +342,10 @@ else ifeq (${LANG},C++)
 	IMP_FILE_EXT := ipp
 endif
 
+# List of src files containing the main function. This list should contain one
+# entry per executable. All files are relative to SRC_ROOT
+# Exemple:
+MAIN_FILES :=
 # List of src files containing the main function for testing. This list should
 # contain one entry per executable. All files are relative to SRC_ROOT
 # Exemple:
@@ -524,7 +540,8 @@ targets:
 			{if ($$1 ~ "# makefile") {print $$2}}'\
 		| sort
 
-compile-test: CFLAGS += -DDEBUG_LVL=TRACE
+compile-test: CFLAGS += -DLOG_LVL=FLT_LOG_TRACE_LVL
+compile-test: CFLAGS += -DFLT_TIMER
 compile-test: ${addprefix compile-test/,${NAMES}}
 compile-test: ${addprefix compile-test/${TEST_PREFIX},${NAMES}}
 
