Removed timer from libflt due to use of C function

--- a/lib/libflt/Makefile
+++ b/lib/libflt/Makefile
@@ -326,7 +326,7 @@ endif
 # Exemple:
 # DIRS := folder1/:folder2/
 # DIRS += folder1/:folder3/:folder4/
-DIRS := log/:unit_test/:timer/
+DIRS := log/:unit_test/
 
 # List of directories with tests. Formating follows the same rules as DIRS
 # above. All folders are relative to TST_ROOT. Each group of folder should only
